# openloop

./: .gitattributes  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PLAN.md  README.md  SECURITY.md  deny.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: audit.yml  ci.yml  release.yml
campaign/: devto-article.md  hackernews-post.md  linkedin-post.md  twitter-thread.md
src/: checker.rs  cli.rs  config.rs  engine.rs  goal.rs  lib.rs  main.rs  parallel.rs  plan.rs  state.rs  tui.rs  wizard.rs  worktree.rs
src/agent/: discovery.rs  mod.rs  runner.rs  types.rs
tests/: cli_tests.rs
tests/fixtures/: mock-agent.sh
