[package]
name = "openloop"
version = "0.1.0"
edition = "2024"
description = "A CLI that delegates work to coding agents in a loop until a goal is achieved"
repository = "https://github.com/gsriraj/openloop"
homepage = "https://github.com/gsriraj/openloop"
documentation = "https://docs.rs/openloop"
license = "MIT"
keywords = ["loop-engineering", "agent", "cli", "automation"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
colored = "2"
inquire = "0.7"

[dev-dependencies]
tempfile = "3"